Fixed spacing bug

--- a/src/index.css
+++ b/src/index.css
@@ -475,7 +475,7 @@ footer a:hover img, footer a:focus img {
 
     .nav-links {
         position: fixed;
-        top: 70px;
+        top: 58px;
         left: 0;
         right: 0;
         bottom: 0;
